k8s/override/local/service/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 2000
  type: LoadBalancer
